--- a/文档.md
+++ b/文档.md
@@ -1,105 +1,148 @@
 # Web Project 文档
 
-## 前端
+***
 
-### ainMapController.js
-主界面mapMadule下进入app的主页的controller
+## 文奕丁负责部分
+前端APP主界面、景点列表页、景点详细页、景点评价页等和景点有关的页面的显示和所有的功能、和后端交互，注册功能
+
+### mainMapController.js
+mapMadule下进入app的主页的controller，实现地图上的mark分图层的显示及隐藏功能，调取后端的webservice实现首页的搜索功能。
 #### template：
-##### main-map.html
-app主页
+##### main-map.html：
+登入app后显示的主页，显示当前地图和顶部底部操作栏
 
-### temListController.js
-项目列表itemListModule和其相关的所有controller，管理从项目列表进入的所有页面的controller
+### ItemListController.js
+itemListModule和其相关的所有controller，管理从项目列表进入的所有页面相关功能的controller：
+##### ItemListCtrl
+从后端获取所有项目的列表并显示，实现推荐和搜索功能。
+推荐：获取项目的评分并选择评分最高的三项显示。采用$ionicPopover显示推荐结果，点击popover上的结果可以跳转到相应的景点详细页。
+搜索：从后端获取所有项目的名字和ID并在前端使用angularjs的filter实现搜索功能。采用$ionicPopover显示搜索结果，点击popover上的结果可以跳转到相应的景点详细页。
+##### TypeController
+控制项目列表页项目类别和排序方式的切换，点击标签切换不同的项目类别和排序方式时，对当前显示的场景数组进行排序或更新内容。数组的内容更新会动态地显示在界面上。
+##### SceneDetailCtrl
+控制项目详细页，调用百度地图api，显示地图，划定项目的圆形范围，从后端获取该项目的基本信息，评价分数，评价人数，图片等，根据分数显示不同的星星数量，并提供加入收藏、足迹、心愿单和从收藏、足迹、心愿单中移除等功能。预留了分享的接口。
+使用开源的组件dialogsManager实现添加／删除后的提示功能。
+获取详细信息框上方控制条的点击事件，在js中动态地控制css，实现详细信息框的展开和收起。
+使用$ionicActionSheet实现分享功能的下拉菜单，使用$ionicPopover实现点击“＋“后的添加评价浮动框。添加评价框使用了开源的组件实现按星级打分的功能。评价提交后调用dialogsManager给用户评价成功的提示。
+##### SceneDetailProfileCtrl
+控制项目详细信息页，从后端获取并显示项目基本信息、图片库和详细信息。
+##### AllPicCtrl 
+控制显示有所图片的页面，从后端获取该景点的图片并显示。
+##### SceneEvaluationCtrl
+控制项目评价页，从后端获取该项目的不同标签，并在地图上以不同的颜色图示。从后端获取数据后，以marker的方式添加到地图上，程序随机出在地点圆形标示范围内的坐标位置来确定marker在地图上的位置。确保marker出现在圆形范围框中并且互不重叠。标签出现的次数以marker的label来显示在地图上。
+##### SceneGoEvaluateCtrl
+控制添加项目评价页，显示当前项目的地图，下方显示不同类别的标签，用户可以以拖动的方式为当前项目添加标签，也可以自定义标签。拖动标签后相应颜色的标签小圆会出现在地图的圆形范围框中，位置的选择和显示标签页中的生成方式一样，保证小圆出现在圆形范围框中且互不重叠。
+“添加设施”标签可以点击输入内容，也可以从点击生成的提示框中选择相应的设施，“其它”标签可以输入文字提交。
 #### template：
-##### ItemListCtrl.html
-从后端获取所有项目的列表并显示
-##### TypeController.html
-控制项目列表页项目类别和排序方式的切换
-##### SceneDetailCtrl.html
-控制项目详细页，调用百度地图api，显示地图，获取该项目的基本信息，评价等，并提供加入收藏、足迹等功能
-使用$ionicActionSheet实现分享功能的下拉菜单，使用$ionicPopover实现点击“＋“后的添加评价浮动框。
-##### SceneDetailProfileCtrl.html
-##### SceneEvaluationCtrl.html
-控制项目评价页，从后端获取该项目的不同标签，并在地图上以不同的颜色图示
-##### SceneGoEvaluateCtrl.html
-控制添加项目评价页，显示当前项目的地图，用户可以以拖动的方式为当前项目添加标签，也可以自定义标签。
-
-### enu-item-list.html
+##### menu-item-list.html:
 顶部菜单，显示所有项目的列表
-#### template：
-##### scene-detail.html
+##### scene-detail.html:
 点击项目列表上的项目后，显示项目信息的页面，包括评分信息和简介等
-##### scene-detail-profile.html
+##### scene-detail-profile.html:
 点击底部“详细信息”按钮后，显示项目的详细信息页面，包括简介、图片和详细介绍
-##### scene-evaluation.html
-点击底部“评价”按钮后，显示项目的已有标签，根据活动类型和场所类型分类，并以不同颜色表示在图上
-##### ○scene-go-evaluate.html
-点击底部“去评价”按钮后，进入可评价的页面
+##### scene-evaluation.html：
+点击底部“评价”按钮后，显示项目的已有标签，根据活动类型和场所类型分类，并以不同颜色的小圆表示在图上，并显示每个标签的被标记数量。
+##### scene-go-evaluate.html:
+在显示评价页面点击底部“去评价”按钮后，进入可评价的页面
+##### scene-all-pic.html
+显示该景点的所有图片
+##### scene-questionnaire.html
+显示问卷页面
 
-【以上部分由文奕丁负责】
+***
+
+## 宋丽姗负责部分：
+主要工作是通过后端接口调用数据库中的数据，完成附近景点、路线规划、搜索历史的记录与显示、我的个人资料等部分的前端代码，以及所有人代码的最终整合。
+
+其中，附近景点和路线规划部分，由调用检测到的附近景点和沿途景点，进行marker的显示和监听以及景观列表的显示。
 
 ### earbyController.js
-附近nearb和其相关的controller
+附近nearby和其相关的controller
+调用后端接口遍历每种景观类型下的所有景观，获取nearbyItemMakerList数组，该数组存储的是附近的景观数据。然后进行图层显示，监听图层的复选框，如果选中则通过读取nearbyItemMakerList数组显示该图层的所有marker，同时把相应地点名称评分信息显示在地图下面的附近景观列表中；重复选中则删除marker和对应的景观列表。
+对每个marker添加click监听，如果检测到了该事件，则显示悬浮框。悬浮框里主要有该景点的名称、评分、图片信息，以及跳转到景观详细的按钮。
 #### template：
 ##### nearby.html
-显示附近的景观
+附近nearby的html页面
 
 ### searchHistoryController.js
-可以查看搜索历史并对搜索历史进行排序
+查看搜索历史并对搜索历史进行排序
+首先要为每个搜索按钮监听函数添加存储历史记录的函数。历史记录数组searchHistoryListId长度为10（可修改），即最多可存储10条历史，只记录历史景观的id。数组类似队列结构，先进先出。
+然后在searchHistoryController.js文件中读取历史记录数组，通过历史景观的id调用后端读取该景点的详细信息，然后显示在search-history页面上。
 #### template：
 ##### search-history.html
 搜索历史的Html页面
 
-### outePlanningController.js
-进行路线规划
+### routePlanningController.js
+路线规划和路线附近的景观显示
+点击提交按钮读取输入框中的出发地、目的地内容进行路径规划后，读取路径沿途景观的数组，通过监听复选框显示对应图层的marker。
+同样对每个mark添加事件监听显示悬浮框。
 #### template：
 ##### route-planning.html
 路线规划的Html页面
 
-### yDetailController.js
-我的详细及其子页面的所有controller
+### DetailController.js
+我的详细资料，控制显示头像及各个按钮的跳转
 #### template：
-##### my-detail.html
+#####my-detail.html
 “我的”的Html页面
-##### my-footprint.html
-“我的足迹”的Html页面
-##### my-wish.html
-“我的心愿单” 的Html页面
-##### my-collection.html
-“我的收藏”的Html页面
 ##### my-about.html
 “关于我们”的Html页面
 
+### FootprintController.js
+我的足迹
+显示各景观类型的景观列表，并修改其默认排序方式为按足迹排序。
+#### template：
+##### my-footprint.html
+“我的足迹”的Html页面
 
-【以上部分由宋丽姗负责】
+### myWishController.js
+我的心愿单
+显示各景观类型的景观列表，并修改其默认排序方式为按心愿排序。
+#### template：
+##### my-wish.html
+“我的心愿单” 的Html页面
 
-## 后端
+### myCollectionController.js
+我的收藏
+显示各景观类型的景观列表，并修改其默认排序方式为按收藏排序。
+#### template：
+##### ○my-collection.html
+“我的收藏”的Html页面
 
+### appController.js
+主要定义一些全局变量和全局函数
+
+### 其他
+前期写了一版前端的界面（主要包含html、css和少量js），后来决定前端使用ionic框架则该版本被废弃。
+
+***
+
+## 杨眉负责部分
 完成了前后端的架构和连通。前端选择了ionic框架，后端采用了Spring框架并连接了Mysql数据库，前后端用REST的方式连接。为使前后端可以在同一电脑上连通采用了CORS跨域。
 
 后端采用了controller—service—repository的三层架构，利用Jparepository简化了数据库读写的功能，用service实现功能的封装，用controller实现requestmapping的映射。Spring提供了强大的功能可以快速实现REST，使得前后端可以顺利地实现使用Web service连接传送json。
 
-【以上部分由杨眉负责】
+***
 
-## API
+## 王颖洲负责部分
+Baidu api
 
-### Baidu api
-#### 1 准备工作
+### 准备工作
 申请百度api密钥，获取百度api的js文件
-#### 2 map
+### map
 var map = new BMap.Map("map"):创建Map实例
 map.centerAndZoom（point,int）：设置中心点和缩放尺寸
-#### 3 marker
+### marker
 var marker = new BMap.Marker(point):设置marker地址
 map.addOverlay(marker)：增加点
-#### 4 label
+### label
 var label = new BMap.Label(String, opts):创建文本标注对象
 marker.setLabel(label):为marker设置文本标签
-#### 5 DrivingRoute（路线规划）
+### DrivingRoute（路线规划）
 DrivingRoute(location:Map|Point|String[, opts:DrivingRouteOptions])
 创建一个驾车导航实例，其中location表示检索区域，类型可为地图实例、坐标点或城市名称的字符串。当参数为地图实例时，检索位置由地图当前的中心点确定；当参数为坐标时，检索位置由该点所在位置确定；当参数为城市名称时，检索会在该城市内进行。
 var options = {
-    onSearchComplete: function(){
+	onSearchComplete: function(){
 	var pts = driving.getResults().getPlan(0).getRoute(0).getPath();    //通过驾车实例，获得一系列点的数组
 	 	var polyline = new BMap.Polyline(pts);
 	 	map.addOverlay(polyline);
@@ -114,7 +157,7 @@ var options = {
 	}
 };
 获取搜索结果的每个点，再将点连线，实现百度默认的绘制方式，更加灵活
-#### 6 信息检索
+### 信息检索
 var content =’’;
 var searchInfoWindow = null;
 searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
@@ -130,11 +173,16 @@ searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
 			]
 		});
 在地图上打开信息窗口，并添加百度自定义的搜索类型控件
-
-#### 7 附近
+### 附近
 附近景点实现方法：1 获取所有路径点 2 对路径点进行判定 3 添加目标marker
-#### 8 感想
+### 感想
 百度api的调用较为简单，说明也很详细，但是美中不足是对于代码的编写者来说不够底层，很难了解其参数和返回值的类型，api文档中的说明也不够详细，导致我们在开发上增加了很多不必要的搜索时间。通过对各大技术论坛的超过数十小时的搜索和摸索，基本能够吃透了百度的api，可以通过其基本操作来实现其自定义的进阶操作。通过这次的PJ，我对于百度地图的工作原理和其开发难度有了更深的理解。
 除去百度地图，我也尝试了使用高德地图，但是百度地图的例子更多，也更容易，因此最后还是选择了百度地图来实现这个PJ。
 
-【以上部分由王颖洲负责】
+***
+
+## 评分
+##### 文奕丁 26
+##### 宋丽姗 26
+##### 杨眉 25
+##### 王颖洲 23
