--- a/文档.md
+++ b/文档.md
@@ -181,8 +181,8 @@ searchInfoWindow = new BMapLib.SearchInfoWindow(map, content, {
 
 ***
 
-## 评分
-##### 文奕丁 26
-##### 宋丽姗 26
-##### 杨眉 25
-##### 王颖洲 23
+## 贡献分
+##### 文奕丁 26％
+##### 宋丽姗 26％
+##### 杨眉 25％
+##### 王颖洲 23％
